--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
-
     <title>Seven Seas Spa</title>
+    
     <style>
         .navbar-custom {
             color: #3B2F2F;
@@ -22,14 +22,14 @@
             font-weight: bold;
         }
 
-        /* .navbar {
+        .navbar {
             position: sticky;
             top: 0;
             z-index: 1000;
-        } */
+        } 
 
         .hero-section {
-        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/images/hero.png') no-repeat
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/images/hero-image.png') no-repeat
         center center;
         background-size: cover;
         color: #FFEBD4;
@@ -47,7 +47,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
@@ -77,11 +76,82 @@
         </div>
     </nav>
 
+
+<!-- Hero Section -->
     <div class="container-fluid hero-section text-center">
         <h1 class="display-4">Welcome to Seven Seas Spa</h1>
         <p class="lead">We are dedicated to improving your overall wellbeing.</p>
         <a href="#" class="btn btn-light btn-lg">Contact Us</a>
     </div>
+
+
+<!-- Main Section -->
+<main class="container my-5">
+    <div class="container">
+        <!-- Our Services Section -->
+        <section class="my-5">
+            <h2 class="display-5">Our Services</h2>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-stretch">
+                    <div class="card shadow" tabindex="0">
+                        <img src="assets/images/yoga.png" alt="Yoga Class" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Yoga Classes</h5>
+                            <p class="card-text">Enhance your flexibility and alleviate stress through our yoga classes.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-stretch">
+                    <div class="card shadow" tabindex="0">
+                        <img src="assets/images/nutrition.png" alt="Nutritional Advice" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Nutritional Advice</h5>
+                            <p class="card-text">Receive tailored nutritional guidance to improve your eating habits.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-stretch">
+                    <div class="card shadow" tabindex="0">
+                        <img src="assets/images/mental_health.png" class="card-img-top" alt="Mental Health">
+                        <div class="card-body">
+                            <h5 class="card-title">Mental Health Support</h5>
+                            <p class="card-text">Access our resources and support to maintain and improve your mental health.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 d-flex align-items-stretch">
+                    <div class="card shadow" tabindex="0">
+                        <img src="assets/images/wellness.png" class="card-img-top" alt="Wellness Programs">
+                        <div class="card-body">
+                            <h5 class="card-title">Wellness Programs</h5>
+                            <p class="card-text">Participate in our wellness programs to enhance your health and overall wellbeing.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Wellness Tips Section -->
+        <section class="my-5">
+            <h2 class="display-5">Wellness Tips</h2>
+            <p>Adopting a healthy lifestyle can be easy. Here are some straightforward tips to enhance your overall wellbeing:</p>
+            <ul>
+                <li><strong>Stay Active:</strong> Engaging in regular physical activities can boost your mood and alleviate anxiety.</li>
+                <li><strong>Eat Healthy:</strong> Consuming a balanced diet helps maintain a healthy weight and lowers the risk of chronic illnesses.</li>
+                <li><strong>Get Enough Sleep:</strong> Quality sleep is crucial for both physical health and mental wellbeing.</li>
+                <li><strong>Manage Stress:</strong> Practices like meditation and deep breathing can aid in stress management and enhance mental health.</li>
+                <li><strong>Stay Hydrated:</strong> Adequate water intake can elevate your energy levels and improve brain function.</li>
+            </ul>
+        </section>
+
+        <!-- Testimonial Section -->
+
+    </div>
+</main>
+
+<!-- Footer -->
+
+    
 
     <script src="https://fonts.googleapis.com/css2?family=Handle&display=swap"></script>
 
