Add further testimonial section carousel content and styling

--- a/index.html
+++ b/index.html
@@ -175,7 +175,32 @@
             <h2 class="display-5">Testimonials</h2>
             <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel" role="region"
                 aria-label="Testimonials" tabindex="0">
-                
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="testimonial text-center">
+                            <img src="assets/images/testimonial1.png" alt="Profile Picture of Sarah Williams"
+                                class="rounded-circle mb-3 testimonial-image">
+                            <p>"I have been a loyal customer of Seven Seas Spa for many years, and the experience is consistently exceptional. The staff is welcoming and highly skilled, and the services are outstanding."</p>
+                            <p>- Sarah Williams</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="testimonial text-center">
+                            <img src="assets/images/testimonial2.png" alt="Profile Picture of Jonathan Smith"
+                                class="rounded-circle mb-3 testimonial-image">
+                            <p>"The wellness programs at Seven Seas Spa have significantly enhanced my health and overall wellbeing. I highly recommend their services."</p>
+                            <p>- Jonathan Smith</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="testimonial text-center">
+                            <img src="assets/images/testimonial3.png" alt="Profile Picture of Emma Johnson"
+                                class="rounded-circle mb-3 testimonial-image">
+                            <p>"The spa treatments at Seven Seas Spa are unparalleled. I always leave feeling revitalized and rejuvenated."</p>
+                            <p>- Emma Johnson</p>
+                        </div>
+                    </div>
+                </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
