--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 </main>
 
 <!-- Footer -->
-<footer>
+<footer class="d-flex justify-content-between align-items-center">
     <p class="mb-0">&copy; 2023 Seven Seas Spa. All rights reserved.</p>
     <div>
         <a href="https://www.facebook.com" target="_blank" class="text-light me-3">
