--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         .navbar-custom .nav-link.active {
             font-weight: bold;
         }
-                                                                                                         /*  */
-        /* .navbar {
+                                                                                                         
+        .navbar {
             position: sticky;
             top: 0;
             z-index: 1000;
-        }  */
+        } 
 
         .hero-section {
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/images/hero-image.png') no-repeat
@@ -82,7 +82,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-custom">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/seven-seas-spa logo.png" alt="Logo" width="30" height="30">
                 Seven Seas Spa
