--- a/contact.html
+++ b/contact.html
@@ -65,9 +65,36 @@
     </header>
 
     <!-- Main Content -->
-    <div class="container">
-        <!-- Empty main content section -->
-    </div>
+    <main class="container my-5">
+        <div class="container">
+            <div class="card shadow-sm p-4">
+                <h2 class="card-title text-center mb-4">Contact Us</h2>
+                <p class="lead">We're here to help and answer any question you might have. We look forward to hearing from you.</p>
+                <form action="thankyou.html">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Your Email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="subject" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="subject" placeholder="Subject" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Message</label>
+                        <textarea class="form-control" id="message" rows="4" placeholder="Your Message" required></textarea>
+                    </div>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </main>
+
 
     <!-- Footer -->
     <footer class="footer text-center text-lg-start py-3 mt-auto">
